# WhisperFlow

./: CMakeLists.txt  Makefile  log.txt
examples/: CMakeLists.txt  common.h
examples/whisper_streaming_mic/: CMakeLists.txt  README.md  whisper_streaming_mic.cpp
include/: whisper.h
src/: whisper.cpp
